tests/machine/x/ocaml/cross_join_triple.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/cross_join_triple.ml", line 35, characters 0-16:
35 | List.rev !__res0)
     ^^^^^^^^^^^^^^^^
Error: This expression has type record1 list
       but an expression was expected of type (string * Obj.t) list list
       Type record1 is not compatible with type (string * Obj.t) list 


Context (around line 35):
  33 |       ) letters;
  34 |   ) nums;
  35 | List.rev !__res0)
  36 | 
  37 | 
